#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.1.1"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    # "all",
    "apriltag",
    "commands2",
    # "cscore",
    # "navx",
    "pathplannerlib",
    # "phoenix5",
    # "phoenix6",
    "photonvision",
    # "playingwithfusion",
    "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = [
    # "robotpy-rev",
]

[project]
name = "robot-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "photonlibpy>=2026.0.1",
    "robotpy>=2025.3.2.2",
    "robotpy-pathplannerlib>=2025.2.7",
    "robotpy-rev>=2026.0.1",
    "robotpy-wpimath>=2026.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
